corrected my-description paragraph, removed letter spacing, padding and margin

--- a/styles.css
+++ b/styles.css
@@ -131,9 +131,10 @@ nav .nav-links {
   width: 70%;
   height: 150px;
   margin: 5px;
-  padding: 25px;
-  font-size: 16px;
-  letter-spacing: .1rem;
+  padding: 5px;
+  font-size: 1.3em;
+  
+  line-height: 2em;
   align-self: center;
   flex-wrap: wrap;
   order: 2;
